--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,17 @@
     <name>java-project</name>
     <url>http://maven.apache.org</url>
     <build>
-        <testSourceDirectory>tests/CarFactor</testSourceDirectory>
+        <sourceDirectory>tests/CarFactor</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
     <dependencies>
         <dependency>
