--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>CarFactor</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>carFactor</name>
+    <name>CarFactor</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
