--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mkyong.hashing</groupId>
-    <artifactId>CarFactor</artifactId>
+    <artifactId>carfactor</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>carfactor</name>
