--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,10 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mkyong.hashing</groupId>
-    <artifactId>carfactor</artifactId>
+    <artifactId>CarFactor</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-<<<<<<< HEAD
-    <name>carfactor</name>
-=======
     <name>CarFactor</name>
->>>>>>> parent of af9d056... Test
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
