--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mkyong.hashing</groupId>
-    <artifactId>CarFactor</artifactId>
+    <artifactId>carfactor</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>CarFactor</name>
+    <name>carfactor</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>2.22.0</version>
+            <version>3.0.0-M3</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
         <dependency>
